# Japarr

./: Dockerfile  LICENSE  Makefile  README.md  config.toml  docker-compose.yml  pyproject.toml
japarr/: adapters.py  discord.py  main.py
japarr/adapters/: base.py  discord.py  overseer.py  radarr.py  sonarr.py
japarr/config/: config.py  config.toml
src/japarr/: db.py  main.py  media_objects.py  server.py
src/japarr/adapters/: base.py  discord.py  jraws.py  overseer.py  radarr.py  sonarr.py
src/japarr/config/: config.toml
src/japarr/config/db/: downloads.db
tests/: pytest.ini  test_db.py  test_dm.py
