[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "japarr"
version = "0.0.1"
authors = [{ name = "Leon Dummer", email = "japarr@dummer.dev" }]
description = "Radarr, Sonarr and Overseer integrated System to download japanese dramas and anime"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "Flask==2.0.2",
    "requests==2.26.0",
    "parsel==1.6.0",
    "discord==1.7.3",
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
    "pytest-icdiff==0.5",
    "factory-boy==3.2.1",
    "requests==2.26.0",
    "tenacity==8.0.1",
    "pytest-postgresql==3.1.2",
    "transaction==3.0.1",
]
